--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "url": "https://github.com/victorwltsang/FriendFinder/issues"
   },
   "homepage": "https://github.com/victorwltsang/FriendFinder#readme",
+  "comments": "There's no need to install the `path` package as it's a native node package.",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "path": "^0.12.7"
+    "express": "^4.15.2"
   }
 }
